javaProject/minic-2025-2026/fr.n7.stl/src/fr/n7/stl/minic/parser/MiniCParser.java
// Generated from MiniCParser.g4 by ANTLR 4.13.1

package fr.n7.stl.minic.parser;
import java.io.IOException;
import java.io.File;
import java.io.FileInputStream;
import java.io.PrintWriter;
import java.io.IOException;
import fr.n7.stl.minic.ast.*;
import fr.n7.stl.minic.ast.expression.*;
import fr.n7.stl.minic.ast.expression.accessible.*;
import fr.n7.stl.minic.ast.expression.allocation.*;
import fr.n7.stl.minic.ast.expression.assignable.*;
import fr.n7.stl.minic.ast.expression.value.*;
import fr.n7.stl.minic.ast.instruction.*;
import fr.n7.stl.minic.ast.instruction.declaration.*;
import fr.n7.stl.minic.ast.scope.*;
import fr.n7.stl.minic.ast.type.*;
import fr.n7.stl.minic.ast.type.declaration.*;
import fr.n7.stl.util.*;
import fr.n7.stl.tam.ast.*;
import fr.n7.stl.tam.ast.impl.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Egal=1, AccoladeOuvrante=2, AccoladeFermante=3, ParentheseOuvrante=4, 
		ParentheseFermante=5, CrochetOuvrant=6, CrochetFermant=7, Point=8, PointInterrogation=9, 
		DeuxPoint=10, Virgule=11, PointVirgule=12, Afficher=13, Si=14, Sinon=15, 
		TantQue=16, Retour=17, DefinitionConstante=18, DefinitionType=19, Enregistrement=20, 
		Enumeration=21, Nouveau=22, Principal=23, Asterisque=24, Oblique=25, PourCent=26, 
		Plus=27, Moins=28, DoubleBarre=29, DoubleEsperluette=30, PointExclamation=31, 
		Inferieur=32, Superieur=33, InferieurEgal=34, SuperieurEgal=35, DoubleEgal=36, 
		ExclamationEgal=37, Esperluette=38, TypeEntier=39, TypeFlottant=40, TypeBooleen=41, 
		TypeCaractere=42, TypeChaine=43, TypeVide=44, Vrai=45, Faux=46, Nul=47, 
		Premier=48, Second=49, Caractere=50, Chaine=51, Identificateur=52, Entier=53, 
		Flottant=54, CommentaireLigne=55, CommentaireBloc=56, WS=57;
	public static final int
		RULE_programme = 0, RULE_bloc = 1, RULE_parametres = 2, RULE_declaration = 3, 
		RULE_instruction = 4, RULE_atomique = 5, RULE_champ = 6, RULE_etiquettes = 7, 
		RULE_type = 8, RULE_affectable = 9, RULE_expressions = 10, RULE_arguments = 11, 
		RULE_expression = 12, RULE_types = 13, RULE_identifiant = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"programme", "bloc", "parametres", "declaration", "instruction", "atomique", 
			"champ", "etiquettes", "type", "affectable", "expressions", "arguments", 
			"expression", "types", "identifiant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'{'", "'}'", "'('", "')'", "'['", "']'", "'.'", "'?'", 
			"':'", "','", "';'", "'print'", "'if'", "'else'", "'while'", "'return'", 
			"'const'", "'typedef'", "'struct'", "'enum'", "'new'", "'main'", "'*'", 
			"'/'", "'%'", "'+'", "'-'", "'||'", "'&&'", "'!'", "'<'", "'>'", "'<='", 
			"'>='", "'=='", "'!='", "'&'", "'int'", "'float'", "'boolean'", "'char'", 
			"'String'", "'void'", "'true'", "'false'", "'null'", "'fst'", "'snd'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Egal", "AccoladeOuvrante", "AccoladeFermante", "ParentheseOuvrante", 
			"ParentheseFermante", "CrochetOuvrant", "CrochetFermant", "Point", "PointInterrogation", 
			"DeuxPoint", "Virgule", "PointVirgule", "Afficher", "Si", "Sinon", "TantQue", 
			"Retour", "DefinitionConstante", "DefinitionType", "Enregistrement", 
			"Enumeration", "Nouveau", "Principal", "Asterisque", "Oblique", "PourCent", 
			"Plus", "Moins", "DoubleBarre", "DoubleEsperluette", "PointExclamation", 
			"Inferieur", "Superieur", "InferieurEgal", "SuperieurEgal", "DoubleEgal", 
			"ExclamationEgal", "Esperluette", "TypeEntier", "TypeFlottant", "TypeBooleen", 
			"TypeCaractere", "TypeChaine", "TypeVide", "Vrai", "Faux", "Nul", "Premier", 
			"Second", "Caractere", "Chaine", "Identificateur", "Entier", "Flottant", 
			"CommentaireLigne", "CommentaireBloc", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniCParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammeContext extends ParserRuleContext {
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
	 
		public ProgrammeContext() { }
		public void copyFrom(ProgrammeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationProgrammeContext extends ProgrammeContext {
		public DeclarationContext declaration;
		public List<DeclarationContext> declarations = new ArrayList<DeclarationContext>();
		public BlocContext main;
		public TerminalNode TypeVide() { return getToken(MiniCParser.TypeVide, 0); }
		public TerminalNode Principal() { return getToken(MiniCParser.Principal, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationProgrammeContext(ProgrammeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterDeclarationProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitDeclarationProgramme(this);
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		try {
			int _alt;
			_localctx = new DeclarationProgrammeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					((DeclarationProgrammeContext)_localctx).declaration = declaration();
					((DeclarationProgrammeContext)_localctx).declarations.add(((DeclarationProgrammeContext)_localctx).declaration);
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(36);
			match(TypeVide);
			setState(37);
			match(Principal);
			setState(38);
			match(ParentheseOuvrante);
			setState(39);
			match(ParentheseFermante);
			setState(40);
			((DeclarationProgrammeContext)_localctx).main = bloc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocContext extends ParserRuleContext {
		public Block unBloc;
		public InstructionContext instruction;
		public List<InstructionContext> instructions = new ArrayList<InstructionContext>();
		public TerminalNode AccoladeOuvrante() { return getToken(MiniCParser.AccoladeOuvrante, 0); }
		public TerminalNode AccoladeFermante() { return getToken(MiniCParser.AccoladeFermante, 0); }
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public BlocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterBloc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitBloc(this);
		}
	}

	public final BlocContext bloc() throws RecognitionException {
		BlocContext _localctx = new BlocContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(AccoladeOuvrante);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4538238559019024L) != 0)) {
				{
				{
				setState(43);
				((BlocContext)_localctx).instruction = instruction();
				((BlocContext)_localctx).instructions.add(((BlocContext)_localctx).instruction);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(AccoladeFermante);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametresContext extends ParserRuleContext {
		public List<ParameterDeclaration> lesParametres;
		public TypeContext type1;
		public IdentifiantContext ident1;
		public TypeContext type;
		public List<TypeContext> suiteType = new ArrayList<TypeContext>();
		public IdentifiantContext identifiant;
		public List<IdentifiantContext> suiteIdent = new ArrayList<IdentifiantContext>();
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<IdentifiantContext> identifiant() {
			return getRuleContexts(IdentifiantContext.class);
		}
		public IdentifiantContext identifiant(int i) {
			return getRuleContext(IdentifiantContext.class,i);
		}
		public List<TerminalNode> Virgule() { return getTokens(MiniCParser.Virgule); }
		public TerminalNode Virgule(int i) {
			return getToken(MiniCParser.Virgule, i);
		}
		public ParametresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametres; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterParametres(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitParametres(this);
		}
	}

	public final ParametresContext parametres() throws RecognitionException {
		ParametresContext _localctx = new ParametresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parametres);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ParentheseFermante:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case Enregistrement:
			case Enumeration:
			case Inferieur:
			case TypeEntier:
			case TypeFlottant:
			case TypeBooleen:
			case TypeCaractere:
			case TypeChaine:
			case TypeVide:
			case Identificateur:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				((ParametresContext)_localctx).type1 = type();
				setState(53);
				((ParametresContext)_localctx).ident1 = identifiant(0);
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Virgule) {
					{
					{
					setState(54);
					match(Virgule);
					setState(55);
					((ParametresContext)_localctx).type = type();
					((ParametresContext)_localctx).suiteType.add(((ParametresContext)_localctx).type);
					setState(56);
					((ParametresContext)_localctx).identifiant = identifiant(0);
					((ParametresContext)_localctx).suiteIdent.add(((ParametresContext)_localctx).identifiant);
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationInstruction uneDeclaration;
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
			this.uneDeclaration = ctx.uneDeclaration;
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationTypeContext extends DeclarationContext {
		public TerminalNode DefinitionType() { return getToken(MiniCParser.DefinitionType, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public DeclarationTypeContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterDeclarationType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitDeclarationType(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationConstanteContext extends DeclarationContext {
		public TerminalNode DefinitionConstante() { return getToken(MiniCParser.DefinitionConstante, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode Egal() { return getToken(MiniCParser.Egal, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public DeclarationConstanteContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterDeclarationConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitDeclarationConstante(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationVariableContext extends DeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode Egal() { return getToken(MiniCParser.Egal, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public DeclarationVariableContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterDeclarationVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitDeclarationVariable(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationFonctionContext extends DeclarationContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ParametresContext parametres() {
			return getRuleContext(ParametresContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public DeclarationFonctionContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterDeclarationFonction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitDeclarationFonction(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new DeclarationVariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				type();
				setState(66);
				identifiant(0);
				setState(67);
				match(Egal);
				setState(68);
				expression(0);
				setState(69);
				match(PointVirgule);
				}
				break;
			case 2:
				_localctx = new DeclarationConstanteContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				match(DefinitionConstante);
				setState(72);
				type();
				setState(73);
				identifiant(0);
				setState(74);
				match(Egal);
				setState(75);
				expression(0);
				setState(76);
				match(PointVirgule);
				}
				break;
			case 3:
				_localctx = new DeclarationTypeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				match(DefinitionType);
				setState(79);
				type();
				setState(80);
				identifiant(0);
				setState(81);
				match(PointVirgule);
				}
				break;
			case 4:
				_localctx = new DeclarationFonctionContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				type();
				setState(84);
				identifiant(0);
				setState(85);
				match(ParentheseOuvrante);
				setState(86);
				parametres();
				setState(87);
				match(ParentheseFermante);
				setState(88);
				bloc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public Instruction uneInstruction;
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	 
		public InstructionContext() { }
		public void copyFrom(InstructionContext ctx) {
			super.copyFrom(ctx);
			this.uneInstruction = ctx.uneInstruction;
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionReturnContext extends InstructionContext {
		public TerminalNode Retour() { return getToken(MiniCParser.Retour, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public InstructionReturnContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionReturn(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionSiSinonContext extends InstructionContext {
		public BlocContext alors;
		public BlocContext sinon;
		public TerminalNode Si() { return getToken(MiniCParser.Si, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public TerminalNode Sinon() { return getToken(MiniCParser.Sinon, 0); }
		public List<BlocContext> bloc() {
			return getRuleContexts(BlocContext.class);
		}
		public BlocContext bloc(int i) {
			return getRuleContext(BlocContext.class,i);
		}
		public InstructionSiSinonContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionSiSinon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionSiSinon(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionTantQueContext extends InstructionContext {
		public BlocContext alors;
		public TerminalNode TantQue() { return getToken(MiniCParser.TantQue, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstructionTantQueContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionTantQue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionTantQue(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionSiContext extends InstructionContext {
		public BlocContext alors;
		public TerminalNode Si() { return getToken(MiniCParser.Si, 0); }
		public TerminalNode ParentheseOuvrante() { return getToken(MiniCParser.ParentheseOuvrante, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ParentheseFermante() { return getToken(MiniCParser.ParentheseFermante, 0); }
		public BlocContext bloc() {
			return getRuleContext(BlocContext.class,0);
		}
		public InstructionSiContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionSi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionSi(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionAffichageContext extends InstructionContext {
		public TerminalNode Afficher() { return getToken(MiniCParser.Afficher, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public InstructionAffichageContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).enterInstructionAffichage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniCParserListener ) ((MiniCParserListener)listener).exitInstructionAffichage(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InstructionDeclarationContext extends InstructionContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdentifiantContext identifiant() {
			return getRuleContext(IdentifiantContext.class,0);
		}
		public TerminalNode Egal() { return getToken(MiniCParser.Egal, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PointVirgule() { return getToken(MiniCParser.PointVirgule, 0); }
		public TerminalNode DefinitionConstante() { return getToken(MiniCParser.DefinitionConstante, 0); }
		public InstructionDeclarationContext(InstructionContext ctx) { copyFrom(ctx); }
		@Override
